assets/styles/main.css
h1,
h2,
p,
#img-caption,
a,
li {
  font-family: "Raleway", sans-serif;
}

h1 {
  font-size: 4rem;
  font-family: "Dancing Script", cursive;
}

h2 {
    text-transform: uppercase;
    font-size: 1.25rem;
}

#main {
  display: flex;
  align-items: center;
  flex-flow: column wrap;
  width: 100%;
}

/* Title Section */
#title {
  background-color: #3f51b5;
  color: #ffffff;
  width: 100%;
  height: 12rem;
  display: flex;
  flex-flow: column wrap;
}

.title,
.subtitle {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.title {
  height: 8rem;
  position: relative;
  top: 1rem;
}

.subtitle {
  height: 4rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.subtitle h2 {
    max-width: 95%;
}

/* Image Section */
#img-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#img-div img {
  max-width: 100%;
}

#img-caption {
  padding: 1rem 0;
}

/* Tribute Info Section  */
#tribute-info {
  width: 100%;
  border-top: 1px solid #bdbdbd;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1rem 0;
}

#tribute-info ul {
    padding: 1rem 0;
    max-width: 66%;
}

li {
    padding-bottom: 0.25rem;
    line-height: 1.5rem;
}

li b {
    font-weight: 700;
}

li i {
    font-style: italic;
}

/* Footer Section */
footer {
  width: 100%;
  height: 3rem;
  background-color: #3F51B5;
  color: white;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

footer p {
    max-width: 95%;
}

footer a {
    color: #FFC107;
    text-decoration: none;
}

footer a:hover {
    color: #ffe082;
}

